# AionGenos

./: .env.example  .gitignore  AionGenos.code-workspace  CLAUDE.md  README.md  pyproject.toml
aiongenos/: __init__.py  config.py
aiongenos/control/: __init__.py  action_modes.py  command_converter.py  rotation.py
aiongenos/curriculum/: __init__.py  arena_adapter.py  ladder.py  manager.py  reset_ik.py
aiongenos/eval/: __init__.py  metrics.py
aiongenos/mdp/: __init__.py  reset.py
aiongenos/memory/: __init__.py  image_embedding.py  recap_buffer.py  retriever.py
aiongenos/orchestrator/: __init__.py  collect.py  eval.py  isaaclab_env_interface.py
aiongenos/pipeline/: __init__.py  stage1_reasoning.py  stage2_attempt.py  stage3_critic.py  stage4_distill_remote_trigger.py  stage4_recap.py
aiongenos/replay/: __init__.py  buffer.py  schema.py  sync.py
docs/: d11_preregistration.md  dev_tracking.md  paper_notes.md  training_visualization.md
scripts/: 00_smoke_vlm.py  01_smoke_isaaclab.sh  04_sync_and_train.sh  05_eval.py  grounding_sanity.py  run_collect.py
server/: llama_server_student.sh  llama_server_teacher.sh  pyproject.toml
server_side/: export_lora_gguf.py  patch_gguf.py  reload_student.sh  reload_student_dual.sh  train_qlora_gemma4.py  train_qlora_kto.py
tests/: debug_env.py  test_action_modes.py  test_aiongenos_env.py  test_aiongenos_env_l1.py  test_aiongenos_env_l2.py  test_aiongenos_env_l3.py  test_critic_observable_only.py  test_curriculum_manager.py  test_replay_buffer.py  test_rotation.py  test_scalar_guard.py  test_vlm_parser.py
(+71 files in other folders)
