[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aiongenos"
version = "0.1.0"
description = "AionGenos — Zero-Demonstration Cognitive Evolution Pipeline for Embodied Intelligence"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "AionGenos Contributors"},
]

dependencies = [
    "httpx>=0.27",
    "numpy>=1.24",
    "Pillow>=10.0",
    "pydantic>=2.0",
    "pytest>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
include = ["aiongenos*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
