[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "aiongenos-server"
version = "0.1.0"
description = "AionGenos Server — QLoRA trainer and model export tools"
requires-python = ">=3.10"

dependencies = [
    "torch>=2.3",
    "transformers>=4.44",
    "peft>=0.12",
    "trl>=0.9",
    "bitsandbytes>=0.43",
    "accelerate>=0.33",
    "datasets>=2.20",
    "numpy>=1.24",
]
